[package]
name = "bping"
version = "2.0.5"
description = "A command line utility to ping a website from anywhere in the world!"
authors = ["Firaenix <Nick.Carton@gmail.com>"]
edition = "2021"
resolver = "2"
repository = "https://github.com/BitpingApp/bping"
homepage = "https://bitping.com"

[package.metadata.wix]
upgrade-guid = "C77C7FB3-4D31-4AEF-9EFE-B8DC66B3DB9F"
path-guid = "8CE721BB-AC0D-4C60-9853-90F230FEA7EA"
license = false
eula = false

[profile.release]
lto = true
opt-level = "z"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dependencies]
reqwest = { version = "0.12", features = [
  "json",
  "rustls-tls",
], default-features = false }
spinners = "4.1.1"
tokio = { version = "1.38.0", features = ["full"] }
dirs = "5.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = { version = "0.3.30", features = ["thread-pool"] }
dialoguer = "0.11.0"
colorful = "0.3.2"
indicatif = "0.17.8"
chrono = { version = "0.4", features = ["serde"] }
celes = "2.4.0"
thiserror = "2.0"
async-stream = "0.3.5"
console = "0.15.8"
keshvar = { version = "0.5.0", features = ["serde", "emojis"] }
color-eyre = "0.6.3"
toml = "0.8"
progenitor = "0.8.0"
bpaf = { version = "0.9.15", features = [
  "color",
  "docgen",
  "autocomplete",
  "batteries",
] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
rand = "0.8.5"
regress = "0.10.1"
